# FWCycleTimeMonitor-RPi

./: .gitignore  BREADBOARD_TESTING_GUIDE.md  DASHBOARD_IMPROVEMENTS_PLAN.md  DEBUG_SELFTEST.md  ERP_STACKLIGHT_API_INTEGRATION.md  HARDWARE_WIRING_GUIDE.md  POE_SWITCH_DEPLOYMENT_GUIDE.md  POE_SWITCH_RECOMMENDATIONS.md  README.md  READY_FOR_TESTING.md  REMOTE_BOOT_IMPLEMENTATION_GUIDE.md  REMOTE_BOOT_SOLUTIONS.md  SESSION_SUMMARY_HARDWARE_SETUP.md  STACKLIGHT_IMPLEMENTATION_PLAN.md  STACKLIGHT_INSTALLATION_GUIDE.md  STACK_LIGHT_IMPLEMENTATION_SUMMARY.md  SUPPLEMENTARY_GROUPS_FIX_TESTING.md  TESTING_NOTES.md  TROUBLESHOOT_GUI_BUTTONS.md  add_m218_machine.sql  check_selftest.sh  pyproject.toml
.claude/: settings.local.json
Download & Install/: Monitor Git.DESKTOP  Monitor Install.DESKTOP
FWCycleDashboard/: DEPLOYMENT_CHECKLIST.md  FWCycleDashboard.csproj  Program.cs  README.md  appsettings.json  fwcycle.db
FWCycleDashboard/Components/: App.razor  _Imports.razor
FWCycleDashboard/Data/: ApplicationDbContext.cs  CommandHistory.cs  Machine.cs  MachineGroup.cs
FWCycleDashboard/Migrations/: 20251113190408_AddPoESwitchConfiguration.Designer.cs  ApplicationDbContextModelSnapshot.cs  (+1 more)
TestPoESwitch/: Program.cs  TestPoESwitch.csproj
docs/: remote_supervisor_config_example.json  remote_supervisor_implementation.md  remote_supervisor_plan.md
scripts/: README.md  deploy-to-all-pis.sh  fix-rpi-gpio-debian13.sh  install-auto-fix.sh  install_fw_cycle_monitor.sh  test_service_exec.sh
systemd/: fw-cycle-monitor.service  fw-cycle-monitor.sudoers  fw-remote-supervisor.service
(+33 files in other folders)
